--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
   <body>
     <h1>Comment a été la présentation ?</h1>
     <form>
-      <my-rate></my-rate>
-      <my-comment
-        label="Description"
-        name="description"
-        onchange="update"
-      ></my-comment>
+      <my-rate label="mark" max="5"></my-rate>
+      <my-comment label="Description" name="description"></my-comment>
       <button type="submit">Submit</button>
 
       <pre></pre>
@@ -47,13 +43,13 @@
     document
       .querySelector("my-comment")
       .addEventListener("onchange", (event) => {
-        description = event.target.value
+        description = event.detail.value
         updateDataPrompt()
       })
 
     // Rate
     document.querySelector("my-rate").addEventListener("onchange", (event) => {
-      rate = event.target.value
+      rate = event.detail.value
       updateDataPrompt()
     })
   </script>
